--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,9 @@ body {
   font-family: poppins, sans-serif;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  background-color: #f5f5f5;
+  /* background-color: #19e68c; */
 }
 
 .container {
