--- a/client/src/components/auth/auth.css
+++ b/client/src/components/auth/auth.css
@@ -1,6 +1,13 @@
+.heading {
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
 .auth-container {
-  width: 100%;
+  width: 99vw;
   display: flex;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: space-between;
   padding: 10px;
@@ -11,6 +18,7 @@
   align-items: center;
   justify-content: center;
   width: 50%;
+  min-height: 70vh;
 }
 
 .auth-right {
@@ -67,9 +75,18 @@ input {
   line-height: 2;
   display: block;
   margin: auto;
-  color: antiquewhite;
+  color: #fcfcfc;
   background-color: #ff0038;
   text-align: center;
   border-radius: 5px;
   font-size: 17px;
+}
+
+@media (max-width: 1150px) {
+  .auth-container {
+    flex-direction: column;
+  }
+  .auth-left {
+    width: 90%;
+  }
 }
