--- a/client/src/components/layout/navbar.css
+++ b/client/src/components/layout/navbar.css
@@ -7,13 +7,14 @@
   align-items: center;
   justify-content: space-between;
   background-color: #14142b;
-  color: antiquewhite;
+  color: #fcfcfc;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .navbar-brand {
+  margin-left: 10px;
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 400;
   cursor: pointer;
 }
 
@@ -25,6 +26,6 @@
 }
 
 .nav-link {
-  color: antiquewhite;
+  color: #fcfcfc;
   cursor: pointer;
 }
