--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,9 +3,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  /* background-color: #f5f5f5; */
-  /* background-color: #ddf3f5; */
-  /* background-color: #19e68c; */
+  background-color: #e5e5e5;
 }
 
 .container {
