--- a/client/src/components/auth/auth.css
+++ b/client/src/components/auth/auth.css
@@ -24,7 +24,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50%;
+  width: 90%;
 }
 
 .auth-form {
@@ -67,6 +67,8 @@ input {
 }
 
 .submit-button {
+  outline: none;
+  border: none;
   width: 8rem;
   height: 2.1rem;
   cursor: pointer;
