--- a/client/src/components/layout/alert/alert.css
+++ b/client/src/components/layout/alert/alert.css
@@ -1,14 +1,26 @@
 .alert {
-  width: 20rem;
+  min-width: 5rem;
+  margin-bottom: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rbga(0, 0, 0, 0.1);
   padding: 10px;
   color: white;
   cursor: pointer;
+  font-size: 1.2rem;
+  animation: 4s fade-out;
 }
 .alert-success {
   background-color: #53d888;
 }
 .alert-error {
   background-color: #ff0038;
+}
+
+@keyframes fade-out {
+  70% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
