--- a/client/src/components/auth/auth.css
+++ b/client/src/components/auth/auth.css
@@ -52,7 +52,20 @@
   font-weight: 500;
 }
 
+.password {
+  background-color: #e5e5e5;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 1.5rem;
+  width: 20rem;
+  border-radius: 6px;
+  padding: 5px;
+  line-height: 1;
+}
+
 input {
+  background-color: #e5e5e5;
   border: none;
   outline: none;
   line-height: 1;
