--- a/client/src/components/layout/navbar/navbar.css
+++ b/client/src/components/layout/navbar/navbar.css
@@ -23,11 +23,11 @@
 .nav-links {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 11rem;
+  margin-right: 20px;
 }
 
 .nav-link {
+  margin-left: 20px;
   color: #fcfcfc;
   cursor: pointer;
 }
