--- a/client/src/components/college/users/users.css
+++ b/client/src/components/college/users/users.css
@@ -21,13 +21,18 @@
 .card {
   display: flex;
   height: 150px;
-  width: 450px;
+  width: 100%;
   padding: 15px;
   align-items: center;
   justify-content: space-between;
   background-color: #e5e5e5;
   border-radius: 15px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .profile {
