--- a/client/src/components/college/users/users.css
+++ b/client/src/components/college/users/users.css
@@ -10,8 +10,15 @@
 }
 
 .users-img {
+  margin-top: 10px;
   object-fit: contain;
-  width: 65%;
+  width: 60%;
+}
+
+.alumni-img {
+  margin-top: 100px;
+  object-fit: contain;
+  width: 60%;
 }
 
 :root {
@@ -20,9 +27,9 @@
 
 .card {
   display: flex;
-  height: 150px;
-  width: 100%;
-  padding: 15px;
+  flex-direction: column;
+  min-height: 15rem;
+  width: 80%;
   align-items: center;
   justify-content: space-between;
   background-color: #e5e5e5;
@@ -36,6 +43,7 @@
 }
 
 .profile {
+  margin: 10px;
   background-color: rgb(146, 146, 146);
   object-fit: contain;
   height: 120px;
@@ -44,7 +52,8 @@
 }
 
 .content {
-  width: 65%;
+  width: 90%;
+  padding: 10px;
 }
 
 .name {
@@ -65,4 +74,35 @@
 .info-content {
   display: flex;
   align-items: center;
+}
+
+.profile-img {
+  width: 100%;
+  height: 100%;
+  /* background-color: rgb(136, 135, 135); */
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid {
+  width: 90%;
+  padding: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 5%;
+}
+
+@media only screen and (max-width: 1350px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 1020px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
